Closed
Bug 1646318
Opened 5 years ago
Closed 5 years ago
test_post and test_patch in netwerk/test/unit/test_http3.js time out
Categories
(Core :: Networking: HTTP, defect, P1)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
mozilla79
| Tracking | Status | |
|---|---|---|
| firefox79 | --- | fixed |
People
(Reporter: michal, Assigned: dragana)
References
(Blocks 1 open bug)
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
Bug 1644374 fixed an assertion when running these tests, but they still don't pass. The connection is blocked when we try to write POST data and we never try to write the data again. In most cases we never receive event Http3Event::Tag::DataWritable although this code in neqo is executed. Even if the event is received and mReadyForWrite.Push(stream) is called we don't try to write the POST data again.
| Assignee | ||
Comment 1•5 years ago
|
||
...should be ignored after calling ReadSegments. r=michal
Updated•5 years ago
|
Assignee: nobody → dd.mozilla
Status: NEW → ASSIGNED
Pushed by ddamjanovic@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e84b5a5ea42b
Split the sending side states and the receiving side states of a Http3Stream and allow to write and read at the same time. Also stop writing data as soon as the Http3Stream has received the response or has been reset. A NS_BASE_STREAM_WOULD_BLOCK... r=michal,necko-reviewers
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox79:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
You need to log in
before you can comment on or make changes to this bug.
Description
•