Bug 1646318 - Split the sending side states and the receiving side states of a Http3Stream and allow to write and read at the same time. Also stop writing data as soon as the Http3Stream has received the response or has been reset. A NS_BASE_STREAM_WOULD_BLOCK... r=michal,necko-reviewers

...should be ignored after calling ReadSegments. r=michal

Differential Revision: https://phabricator.services.mozilla.com/D80279